--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <junit.version>4.11</junit.version>
-        <hadoop.version>3.1.2</hadoop.version>
+        <hadoop.version>3.1.1-hw-ei-311006</hadoop.version>
         <guava.version>30.1.1-jre</guava.version>
-        <mysql.version>5.1.38</mysql.version>
+        <mysql.version>8.0.25</mysql.version>
     </properties>
 
     <dependencies>
